-Wformat warning on HistoryController.cpp:295:5 https://bugs.webkit.org/show_bug.cgi?id=171028

Reviewed by Daniel Bates.

Need to cast WebCore::FrameLoadType to int before using it in printf.

* loader/HistoryController.cpp:
(WebCore::HistoryController::goToItem):

Canonical link: https://commits.webkit.org/187985@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215580 268f45cc-cd09-0410-ab3c-d52691b4dbfc