Source/WebCore/loader/HistoryController.cpp
@@ -292,7 +292,7 @@ bool HistoryController::shouldStopLoadingForHistoryItem(HistoryItem& targetItem)
 // This includes recursion to handle loading into framesets properly
 void HistoryController::goToItem(HistoryItem& targetItem, FrameLoadType type)
 {
-    LOG(History, "HistoryController %p goToItem %p type=%d", this, &targetItem, type);
+    LOG(History, "HistoryController %p goToItem %p type=%d", this, &targetItem, static_cast<int>(type));
 
     ASSERT(!m_frame.tree().parent());
     
